--- a/knead-frontend/src/components/MessageModal/MessageModal.css
+++ b/knead-frontend/src/components/MessageModal/MessageModal.css
@@ -29,16 +29,18 @@
 }
 
 .modal-button {
-  width: 20px;
-  height: 20px;
+  width: 35px;
+  height: 35px;
   background-color: rgb(0, 166, 255);
+  border: none;
   border-radius: 10px;
   padding: 5px;
   outline: none;
   cursor: pointer;
+  color: white
 }
 
 .modal-button:hover {
-  width: 22px;
-  height: 22px;
+  width: 38px;
+  height: 38px;
 }
