Minor change to styling

--- a/knead-frontend/src/components/StrategyList/StrategyList.css
+++ b/knead-frontend/src/components/StrategyList/StrategyList.css
@@ -5,12 +5,14 @@
   overflow-y: auto;
   padding-right: 2rem;
   box-sizing: content-box;
+  margin-top: 50px;
 }
 
 .strategies {
   display: flex;
   flex-direction: column;
   gap: 20px;
+
 }
 
 .strategy {
